--- a/src/main/webapp/i18n/fr/commande.json
+++ b/src/main/webapp/i18n/fr/commande.json
@@ -24,7 +24,10 @@
             "datelimitlivraison": "Datelimitlivraison",
             "datecommande": "Datecommande",
             "etat": "Etat",
-            "agent": "Agent"
+            "soldee": "Soldee",
+            "agent": "Agent",
+            "fournisseur": "Fournisseur",
+            "magasin": "Magasin"
         }
     }
 }
