--- a/src/main/webapp/i18n/fr/ligneCommande.json
+++ b/src/main/webapp/i18n/fr/ligneCommande.json
@@ -21,6 +21,7 @@
             "montanttotalht": "Montanttotalht",
             "montanttotalttc": "Montanttotalttc",
             "prix": "Prix",
+            "taxeTva": "Taxe Tva",
             "agent": "Agent",
             "article": "Article",
             "commande": "Commande",
