--- a/src/main/webapp/i18n/en/facture.json
+++ b/src/main/webapp/i18n/en/facture.json
@@ -17,14 +17,14 @@
                 "title": "Facture"
             },
             "numfacture": "Numfacture",
-            "montanttotalht": "Montanttotalht",
-            "montanttva": "Montanttva",
+            "montanttotalht": "Montant totalht",
+            "montanttva": "Montant tva",
             "reduction": "Reduction",
-            "codebarre": "Codebarre",
-            "libellefacture": "Libellefacture",
-            "dateedition": "Dateedition",
-            "datefacturation": "Datefacturation",
-            "montanttotalttc": "Montanttotalttc",
+            "codebarre": "Code barre",
+            "libellefacture": "Libelle facture",
+            "dateedition": "Date edition",
+            "datefacturation": "Date facturation",
+            "montanttotalttc": "Montant totalttc",
             "observation": "Observation",
             "client": "Client",
             "caisse": "Caisse",
