--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -140,5 +140,5 @@
         "emailexists": "Email déjà utilisé !",
         "idexists": "Une nouvelle entité {{entityName}} ne peut pas avoir d'ID !"
     },
-    "footer": "Ceci est votre pied de page"
+    "footer": "Copyright ballack"
 }
