--- a/src/main/webapp/i18n/fr/ligneCommande.json
+++ b/src/main/webapp/i18n/fr/ligneCommande.json
@@ -25,7 +25,8 @@
             "agent": "Agent",
             "article": "Article",
             "commande": "Commande",
-            "fournisseur": "Fournisseur"
+            "fournisseur": "Fournisseur",
+            "magasin": "Magasin"
         }
     }
 }
