--- a/src/main/webapp/i18n/en/customUser.json
+++ b/src/main/webapp/i18n/en/customUser.json
@@ -27,6 +27,7 @@
             "telephone": "Telephone",
             "viewVente": "View Vente",
             "viewCmde": "View Cmde",
+            "passwordApi": "Password Api",
             "user": "User"
         }
     }
