--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -26,6 +26,7 @@
                 "stock": "Stock",
                 "typeSortieArticle": "Type Sortie Article",
                 "customUser": "Custom User",
+                "transfertMagasin": "Transfert Magasin",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
